TAG: qcreports_db-6-0-10-4
DATE: 05/08/2017
STAFF: lec 
TR12540/DO (Disease Ontology)
weekly/VOC_OMIMGenotypeNoMapDO.py : obsolete

TAG: qcreports_db-6-0-10-3
DATE: 05/4/2017
STAFF: sc
CHANGES: TR12573
1) added mgd/BIB_DupPM_DOI.sql

TAG: qcreports_db-6-0-10-2
TAG: qcreports_db-6-0-10-1
DATE: 04/27/2017
STAFF: lec 
TR12540/DO (Disease Ontology)
ALL_OMIMNoMP.py renamed ALL_DONoMP.py
VOC_OMIMDOMult.py ; add genotypes
VOC_OMIMObsolete.sql renamed VOC_DOObsolete.sql
ALL_Progress.py : remove OMIM
change OMIM annotations to DO annotations:
GO_Combined_Report.py
MRK_GOUnknown.sql
MRK_GOIEA.py
GXD_OrphanGenotype.sql
PRB_StrainNonStd.sql

TAG: qcreports_db-6-0-8-15
DATE: 04/25/2017
STAFF: sc
CHANGES: TR12466 add Noctua section to mgd/GO_stats.py

TAG: qcreports_db-6-0-8-14
DATE: 04/14/2017
STAFF: sc
CHANGES: TR12551 PHENO_Features.py - new report.

TAG: qcreports_db-6-0-8-13
DATE: 04/06/2017
STAFF: sc
CHANGES: TR12523 Tweak to GXD_HTOverview report and swap order
   of HT reports 2 and 3 on index page.

TAG: qcreports_db-6-0-8-12
DATE: 03/28/2017
STAFF: sc
CHANGES: TR12543 - archive GO report
1) adding archive of report to qcnightly_reports.csh
2) updated GO archive bullet 14 description:  qcr.shtml

TAG: qcreports_db-6-0-8-11
DATE: 03/14/2017
STAFF: lec
CHANGES: 
mgd/MRK_Alleles.sql : exclude "reserved" marker symbols

TAG: qcreports_db-6-0-8-10
DATE: 03/13/2017
STAFF: sc
CHANGES: TR12489 - bug fix to  MRK_PRO_NoGO.rpt

TAG: qcreports_db-6-0-8-9
TAG: qcreports_db-6-0-8-8
DATE: 02/23/2017, 03/02/2017
STAFF: lec
CHANGES: 
TR12491/J:226028/Lewondowski
TR12427/remove obsolete vocload reports
vocload/OMIM/OMIM.clusters.diff1
vocload/OMIM/OMIM.clusters.diff2

TAG: qcreports_db-6-0-8-7
DATE: 02/21/2017
STAFF: sc
CHANGES: TR12105 new allele reference QC rpt

TAG: qcreports_db-6-0-8-6
TAG: qcreports_db-6-0-8-5
DATE: 02/17/2017
STAFF: lec
CHANGES: 
TR12427/Disease Ontology (DO)/qcr.shtml
TR12528/PRB_StrainJAX2.py

TAG: qcreports_db-6-0-8-4
DATE: 02/15/2017
STAFF: sc