@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-10-5
+DATE: 05/17/2017
+STAFF: lec 
+mgd/ALL_CellLineProvider.sql
+
 TAG: qcreports_db-6-0-10-4
 DATE: 05/08/2017
 STAFF: lec 
